	 the hacking/ subdir (thanks, Stuart Brady) (fuse-utils_0_8_0-branch)
20070510 ChangeLog,README,configure.in,man/{createhdf,fuse-utils,listbasic,
	 raw2hdf,rzxcheck,rzxdump,rzxtool,scl2trd,snap2tzx,snapconv,tapeconv,
	 tzxlist}.1: updates for 0.8.0.1 release (fuse-utils_0_8_0-branch).
20070511 man/{createhdf.1,raw2hdf.1}: update pointers to HDF spec to point to
	 v1.1 (patch #1716433) (fuse-utils_0_8_0-branch) (Stuart Brady).
20070511 TAG: fuse-utils_0_8_0_1 (fuse-utils_0_8_0-branch)
20070512 hacking/cvs-tags: document merge back to trunk
	 (fuse-utils_0_8_0-branch).
20070512 Merge changes from fuse-utils_0_8_0-branch to HEAD.
20070512 TAG: fuse-utils_0_8_0-merge-1
20070513 listbasic.c,utils.h: fix filenames in comments (patch #1716201)
         (Stuart Brady).
20070517 compat.h,createhdf.c,scl2trd.c,snapconv.c,utils.c: add O_BINARY
         for fuse-utils (patch #1718168) (Stuart Brady).
20070520 Remove .cvsignore files and ignore files not automatically ignored
	 by Subversion.
20070522 tzxlist.c: remove warnings in printfs (Fred).
20070522 snap2tzx.c,tapeconv.c,man/tapeconv.1: don't call deprecated tape API
         functions (Fred).
20070526 <almost everything>: update FSF address in GPL notices (Stuart).
20070529 Makefile.am,acinclude.m4,audio2tape.c,configure.in,
         man/{Makefile.am,audio2tape.1}: add new audio file to tape image
         convertor (part of patch #1725974) (Fred).
20070529 acinclude.m4: remove warnings about underquoted definitions (Stuart).
20070531 audio2tape.c,tzxlist.c: remove warnings.
20070606 man/fuse-utils.1: mention audio2tape (Stuart).
20070606 man/{audio2tape.1,createhdf.1,listbasic.1,rzxcheck.1,rzxdump.1,
	 rzxtool.1,scl2trd.1,snap2tzx.1,snapconv.1,tapeconv.1,tzxlist.1}:
	 spelling/formatting fixes (Stuart).
20070608 configure.in,Makefile.am,tape2wav.c,man/{tape2wav.1,audio2tape.1},
         audio2tape.c: add simple tape image to wav file convertor (Fred).
20070608 man/*.1: fix dashes (Stuart).